# let-lag-mobile

./: Cargo.toml
android/: pyproject.toml  run.nu  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/ly/hall/jetlagmobile/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ly/hall/jetlagmobile/: GameScreen.kt
android/app/src/main/java/ly/hall/jetlagmobile/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/ly/hall/jetlagmobile/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
crates/api-types/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/hide_and_seek/: mod.rs  state.rs
crates/core/src/hide_and_seek/question/: context.rs  matching.rs  measuring.rs  mod.rs  radar.rs  tentacle.rs  thermometer.rs
crates/core/src/map/: mod.rs  tile.rs
crates/core/src/shape/: compiler.rs  instruction.rs  mod.rs  types.rs
crates/core/src/shape/builtin/: circle.rs
crates/core/src/shape/compiled/: mod.rs
crates/core/src/shape/compiled/shader/: argument.rs  cache.rs  mod.rs  template.wgsl
crates/core/src/shape/compiled/shader/routine/: mod.rs  point.rs
crates/core/src/shape/contour_texture/: mod.rs
crates/core/src/transit/: mod.rs
crates/mobile/: Cargo.toml  build.rs
crates/mobile/assets/: bright.json  libre-theme.json
crates/mobile/src/: android.rs  jet-lag-core.udl  lib.rs
crates/mobile/src/layers/: mod.rs
crates/mobile/src/layers/oob/: android.rs  culling.rs  traverse_quadtree.rs
crates/mobile/src/layers/test_square/: android.rs  traverse_quadtree.rs
crates/mobile/src/render/: fragment.wgsl  mod.rs  style.rs  thread.rs  vertex.wgsl
crates/mobile/src/state/view/: mod.rs
crates/mobile/src/state/view/map/: mod.rs  source.rs
crates/mobile/src/tile_server/: mod.rs  routes.rs
crates/mobile/src/transit/: architecture.md
crates/server/: Cargo.toml
crates/transit/: Cargo.toml  README.md
crates/transit/src/: identifiers.rs  lib.rs
crates/transit/src/models/: calendar.rs  mod.rs  traits.rs  types.rs
crates/transit/src/network/: mod.rs  traits.rs
crates/transit/src/provider/: mod.rs  static_provider.rs
crates/transit/src/spatial/: index.rs  mod.rs  queries.rs
crates/uniffi-bindgen/: Cargo.toml
ios/: ContentView.swift  Persistence.swift  jetlagiosApp.swift  project.yml  run.nu
jetlagios.xcodeproj/: project.pbxproj
jetlagios.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
jetlagios.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
tools/.claude/: settings.local.json
tools/mountain-kml-parser/: Cargo.toml  input.kml
tools/mountain-kml-parser/src/: main.rs
tools/osm-landmass/: Cargo.toml  README.md
tools/osm-landmass/src/: assembly.rs  clip.rs  geometry.rs  main.rs  output.rs  pbf.rs
