[package]
name = "jet-lag-core"
version = "0.1.0"
edition = "2024"

[dependencies]
boostvoronoi = "0.12.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
glam = "0.30.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive", "phf", "strum_macros"] }
twox-hash = "2.1.2"
unicode-segmentation = { version = "1.12.0" }
yrs = "0.25.0"
