[package]
name = "jet-lag-mobile"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "jet_lag_mobile"

[dependencies]
uniffi = "0.30"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "net",
    "macros",
    "fs",
] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
pmtiles = { version = "0.13", features = ["mmap-async-tokio", "tilejson"] }
thiserror = "2"
geojson = "0.24"
palette = "0.7.6"
jet-lag-core = { path = "../core" }
glow = "0.16.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
tracing = "0.1.44"
tracing-logcat = "0.1.0"
tracing-subscriber = "0.3.22"
eyre = "0.6.12"
zerocopy = "0.8.31"
glam = "0.30.9"
actix = "0.13.5"
wgpu = { version = "28.0.0", features = ["naga-ir"] }
wgpu-hal = "28.0.0"
spatialtree = "0.1.3"
geo = "0.32.0"
pin-project = "1.1.10"
replace_with = "0.1.8"
pollster = "0.4.0"
ash = "0.38.0"
ndk = { version = "0.9.0", features = ["api-level-26"] }
ndk-sys = { version = "0.6.0" }
