[package]
name = "osm-landmass"
version = "0.1.0"
edition = "2021"
description = "Generate landmass polygons from OpenStreetMap PBF data"

[[bin]]
name = "osm-landmass"
path = "src/main.rs"

[dependencies]
# PBF parsing
osmpbf = "0.3"

# Geometry operations
geo = "0.28"
geo-types = "0.7"

# Output
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Collections and utilities
hashbrown = "0.14"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
strum = { version = "0.27.2", features = ["strum_macros", "derive", "phf"] }
